<?xml version="1.0" encoding="utf-8"?>

<!--Welcome Onboarding Screen-->

<!--Contain Hi Message to Customer and Next Button to navigate to Instruction Fragment-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.welcome_onboarding.view.WelcomeOnboardingFragment"
        android:padding="@dimen/appPadding_p8">

        <TextView
            android:id="@+id/txt_welcome_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/welcome_to_shoe_store"
            style="@style/onboarding_text_head"/>

<!--    Hi message to Customer-->
        <TextView
            android:id="@+id/txt_client_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/onboarding_text_body"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome_head"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/appMargin_m8"
            android:text="@string/dear_customer"
            android:layout_marginBottom="@dimen/appMargin_m16"/>

        <TextView
            android:id="@+id/txt_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/appMargin_m8"
            app:layout_constraintTop_toBottomOf="@id/txt_client_body"
            android:text="@string/welcome_message"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/onboarding_text_body"
            />

<!--        Next Button To Navigation-->
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/appMargin_m16"
            android:text="@string/next"
            style="@style/button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
