<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    instructions Fragment for Customer-->
<!--    use ConstraintLayout as a root Layout to order elements -->
<!--    use Vertical chain style packed for all TextView to appears at center of screeen-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.welcome_onboarding.view.WelcomeOnboardingFragment"
        android:padding="@dimen/appPadding_p8">

        <TextView
            android:id="@+id/txt_instruction_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/instructions"
            style="@style/onboarding_text_head"
            android:layout_marginBottom="@dimen/appMargin_m16"
            app:layout_constraintBottom_toTopOf="@id/txt_instruction_one"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/txt_instruction_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/onboarding_text_body"
            app:layout_constraintTop_toBottomOf="@id/txt_instruction_head"
            app:layout_constraintBottom_toTopOf="@id/txt_instruction_two"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/appMargin_m8"
            android:text="@string/instruction_one"
            android:layout_marginBottom="@dimen/appMargin_m8"/>

        <TextView
            android:id="@+id/txt_instruction_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/appMargin_m8"
            app:layout_constraintTop_toBottomOf="@id/txt_instruction_one"
            android:text="@string/instruction_two"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/onboarding_text_body"
            app:layout_constraintBottom_toTopOf="@id/btn_finish"/>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/appMargin_m16"
            android:text="@string/finish"
            style="@style/button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
